--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
                 7: 19999
             };
             const purchaseData = {
+                type: 'store',
                 action: 'buy_course',
                 course_id: courseId,
                 course_name: courseNames[courseId],
