--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
         <div class="courses-grid">
             <div class="course-card">
                 <div class="course-icon" style="background: linear-gradient(45deg, #48dbfb, #0abde3);">🤖</div>
-                <div class="course-title">Нейросети и ИИ для работы и личных задач</div>
+                <div class="course-title">Нейросети и ИИ для работы и личных задач. Тариф Стартовый</div>
                 <div class="course-description">Автоматизируете рутину с помощью ИИ и нейросетей</div>
                 <div class="course-price">$49.99</div>
-                <button class="buy-button" onclick="buyCourse(6)">Купить курс</button>
+                <button class="buy-button" onclick="buyCourse(100051299)">Купить курс</button>
             </div>
         </div>
     </div>
@@ -252,11 +252,11 @@
          */
         function sendPurchaseData(courseId, email, phone) {
             const courseNames = {
-                6: 'Нейросети и ИИ для работы и личных задач'
+                100051299: 'Нейросети и ИИ для работы и личных задач. Тариф Стартовый'
             };
             // Цены курсов в долларах США (USD)
             const coursePrices = {
-                6: 49.99 // $49.99
+                100051299: 49.99 // $49.99
             };
             const purchaseData = {
                 type: 'store',
