--- a/index.html
+++ b/index.html
@@ -506,15 +506,18 @@
         
 
         // Отправляем событие только при первом открытии WebApp магазина
-        try {
-            tg?.sendData(JSON.stringify({ 
-                type: 'store_page_opened'
-            }));
-            sessionStorage.setItem('store_page_opened', 'true');
-        } catch (e) {
-            console.error('Failed to send store page opened event:', e);
+        //try {
+            // Проверяем, не отправляли ли уже это событие
+            //if (!sessionStorage.getItem('store_page_opened')) {
+                //tg?.sendData(JSON.stringify({ 
+                    //type: 'store_page_opened'
+                //}));
+                //sessionStorage.setItem('store_page_opened', 'true');
+            //}
+        //} catch (e) {
+            //console.error('Failed to send store page opened event:', e);
             // Не закрываем webapp при ошибке отправки события
-        }
+        //}
 
         // Получаем данные пользователя
         const userId = tg?.initDataUnsafe?.user?.id || 'demo_user';
